# airwin2clap

./: .gitmodules  CMakeLists.txt  README  README.md
.github/workflows/: feature.yml
include/: airwin-to-clap.h  audioeffectx.h
src/: airwin-to-clap.cpp  claudio.cpp  claudio_configured.cpp  individual_airwin.in.cpp  individual_airwin.in.h  individual_claudio.in.cpp  individual_claudio.in.h
